@@ -2676,8 +2676,10 @@ addin:
 		}
 		return(APPEND);
 
-	case 'I':		/** insert at beginning of line **/
+	case 'I':		/** insert to the left of the first non-blank character **/
 		cur_virt = first_virt;
+		while( cur_virt < last_virt && isblank(cur_virt) )
+			++cur_virt;
 		sync_cursor(vp);
 		/* FALLTHROUGH */
 
@@ -2695,7 +2697,7 @@ addin:
   		}
 		return(INSERT);
 
-	case 'C':		/** change to eol **/
+	case 'C':		/** change to eol and insert **/
 		c = '$';
 		goto chgeol;
 
@@ -2706,6 +2708,8 @@ addin:
 			c = getcount(vp,ed_getchar(vp->ed,-1));
 chgeol:
 		vp->lastmotion = c;
+		if( cur_virt == INVALID )
+			return(INSERT);
 		if( c == 'c' )
 		{
 			del_line(vp,GOOD);
