@@ -5897,9 +5897,9 @@ the entire line will be deleted.
 Enter input mode and insert text before the current character.
 .TP 10
 .B I
-Insert text before the beginning of the line.
+Insert text before the first non-blank character.
 Equivalent to
-.BR 0i .
+.BR ^i .
 .TP 10
 [\f2count\fP]\f3P\fP
 Place the previous text modification before the cursor.
